--- a/index.html
+++ b/index.html
@@ -1,33 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <title>Advanced CSS - Assignment 1</title>
-    <link href="style.css" rel="stylesheet" type="text/css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <title>Advanced CSS - Assignment 1</title>
+        <link href="style.css" rel="stylesheet" type="text/css">
+    </head>
 
 <body>
-    <h1>Main Heading</h1>
-    <p>Paragraph 1</p>
-    <a href="https://www.google.com/">Google</a>
-    <a href="https://www.google.com/doodles">Google Doodles</a>
-    <a href="https://www.link-group.eu/" target="_blank">Goto Link Group</a>
-    <div id="first-div">
-        <h2>Subheading</h2>
-        <p>Paragraph 2</p>
-        <p>Paragraph 3</p>
-        <div id="second-div">
-            <h3>Sub subheading</h3>
-            <p>Paragraph 4</p>
-            <p>Paragraph 5</p>
-            <p>Paragraph 6</p>
-            <p>Paragraph 7</p>
-            <p>Paragraph 8</p>
+<h2>Gallery heading</h2>
+    <div class="container">
+        <div class="grid">
+          <div class="cell">
+            <figure>
+            <img src="placeholder-image.png" class="responsive-image" />
+            <figcaption>Image title</figcaption>
+            </figure>
+          </div>
+          <div class="cell">
+            <figure>
+                <img src="placeholder-image.png" class="responsive-image" />
+                <figcaption>Image title</figcaption>
+                </figure>
+          </div>
+          <div class="cell">
+            <figure>
+                <img src="placeholder-image.png" class="responsive-image" />
+                <figcaption>Image title</figcaption>
+                </figure>
+          </div>
+          <div class="cell">
+            <figure>
+                <img src="placeholder-image.png" class="responsive-image" />
+                <figcaption>Image title</figcaption>
+                </figure>
+          </div>
         </div>
-    </div>
-    <p>Paragraph 9</p>
-    <p>Paragraph 10</p>
-</body>
+      </div>
 
+      <p>
+        At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.
+      </p>
+</body>
 </html>
